# MS_Proj

./: README.md  reddit_scraper_example.py
MS_Proj_Env/: pyproject.toml  test.ipynb
MS_Proj_Env/tests/: BERTopic_results.xlsx  CR_Extraction.ipynb  EDA.ipynb  Phase_01.ipynb  Topic_Modeling_Experiments.ipynb  _df_2.xlsx  _test.ipynb  all_purposes_cr_extraction_results_01.xlsx  check_reddit_reviews.xlsx  professional_cr_extraction_results.xlsx  reddit_reviews.xlsx  reddit_reviews_02.xlsx  reddit_reviews_cleaned.xlsx  reddit_reviews_suggest.xlsx  reddit_reviews_tagged.xlsx  reddit_reviews_tagged_enhanced_decompose.xlsx  reddit_reviews_tagged_enhanced_without_category_5.xlsx  test.ipynb  topic_df_50.csv
MS_Proj_Env/tests/Codes/: Agent_Driven_CRExtraction_Test.ipynb  Agent_Driven_CRExtraction_v2.ipynb  Agent_Driven_CRExtraction_v3.ipynb  Agent_Driven_CRExtraction_v4.ipynb  CR_Extraction.ipynb  EDA.ipynb  Phase_01.ipynb  Tagger_Engine_Test.ipynb  Topic_Modeling_Experiments.ipynb
MS_Proj_Env/tests/Codes/chroma_db/: chroma.sqlite3
MS_Proj_Env/tests/Codes/chroma_db_casual/: chroma.sqlite3
MS_Proj_Env/tests/Codes/chroma_db_professional/: chroma.sqlite3
MS_Proj_Env/tests/Data/CR_Extraction/: agent_drive_cr_extraction_01.xlsx  agent_drive_cr_extraction_02.xlsx  agent_driven_cr_extraction_03.xlsx  agent_driven_cr_extraction_04.xlsx  agent_driven_cr_extraction_05.xlsx  all_purposes_cr_extraction_results_02.xlsx  all_purposes_cr_extraction_results_03.xlsx  all_purposes_cr_extraction_results_04.csv  all_purposes_cr_extraction_results_04.xlsx  phase3_cr_consolidated_v3.xlsx  (+2 more)
(+17 files in other folders)
