[tool.poetry]
name = "ms-proj-env"
version = "0.1.0"
description = ""
authors = ["Dae-yangKim <102850893+Dae-yangKim@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.3.3"
numpy = "<=2.3.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"
praw = "^7.8.1"
openpyxl = "^3.1.5"
openai = "^2.14.0"
google-generativeai = "^0.8.6"
spacy = ">=3.7.5"
thinc = ">=8.2.2"
confection = ">=0.1.3"
gensim = "^4.4.0"
bertopic = "^0.17.4"
keybert = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
